--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.0",
     "redux": "^3.7.0"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.1",
     "dotenv": "4.0.0",
+    "enzyme": "^2.8.2",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-react-app": "^1.0.4",
@@ -41,6 +44,7 @@
     "promise": "7.1.1",
     "react-dev-utils": "^3.0.0",
     "react-error-overlay": "^1.0.7",
+    "react-test-renderer": "^15.6.1",
     "style-loader": "0.17.0",
     "sw-precache-webpack-plugin": "0.9.1",
     "url-loader": "0.5.8",
