--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://dokuro-yh.github.io/react-app",
   "private": true,
   "dependencies": {
+    "antd": "^2.11.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -19,6 +20,7 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
+    "babel-plugin-import": "^1.2.1",
     "babel-preset-react-app": "^3.0.0",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
