--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "private": true,
   "dependencies": {
     "antd": "^2.12.0",
+    "history": "^4.6.3",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.0",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "next",
     "redux": "^3.7.0"
   },
   "devDependencies": {
