--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "history": "^4.6.3",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
+    "rc-animate": "^2.4.0",
     "react": "^15.6.1",
-    "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
+    "react-transition-group": "^2.1.0",
     "redux": "^3.7.0"
   },
   "devDependencies": {
