--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
     "react-transition-group": "^2.1.0",
-    "redux": "^3.7.0"
+    "redux": "^3.7.0",
+    "redux-actions": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
