--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^2.12.0",
     "history": "^4.6.3",
     "lodash": "^4.17.4",
+    "path-to-regexp": "^1.7.0",
     "prop-types": "^15.5.10",
     "rc-animate": "^2.4.0",
     "react": "^15.6.1",
