--- a/package.json
+++ b/package.json
@@ -16,11 +16,8 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
-    "react-transition-group": "^2.1.0",
     "redux": "^3.7.0",
-    "redux-actions": "^2.2.1",
-    "redux-observable": "^0.14.1",
-    "rxjs": "^5.4.2"
+    "redux-actions": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
@@ -96,15 +93,6 @@
     ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
-    }
-  },
-  "proxy": {
-    "/api": {
-      "target": "http://localhost:9000",
-      "pathRewrite": {
-        "^/api": ""
-      },
-      "ws": true
     }
   }
 }
