--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lodash": "^4.17.4",
     "path-to-regexp": "^1.7.0",
     "prop-types": "^15.5.10",
-    "rc-animate": "^2.4.0",
+    "ramda": "^0.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
